# Compiler

./: CMakeLists.txt  README.md  a  test  test3  text2
Compiler-main-2/: README.md
Compiler-main-2/examples/: test_lexical.txt
Compiler-main-2/src/: main.cpp
Compiler-main-2/src/lexer/: Lexer.h  Token.h
Compiler-main-2/src/optimizer/: Optimizer.cpp  Optimizer.h
Compiler-main-2/src/parser/: Parser.cpp  Parser.h  Quadruple.h
Compiler-main-2/src/semantic_analyzer/: SymbolTable.cpp
Compiler-main-2/src/utils/: Printer.h
examples/: expressions_and_comments.txt  simple_program.txt  test_lexical.txt
src/: main.cpp
src/code_generator/: CodeGenerator.cpp  CodeGenerator.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/optimizer/: optimizer.cpp  optimizer.h
src/parser/: AST.h  Parser.cpp  Parser.h  Quadruple.h
src/semantic_analyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h
src/target_code_generator/: TargetCodeGenerator.cpp  TargetCodeGenerator.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  Printer.cpp
tests/: test.pas
webview/: package-lock.json  package.json  server.js  temp_code.tmp
webview/public/: app.js  index.html  style.css
